fix video on mobile

--- a/src/packages/home/styles.module.scss
+++ b/src/packages/home/styles.module.scss
@@ -24,7 +24,7 @@
 
 		.sub {
 			font-size: 12px;
-			opacity: 80%;
+			color: #777;
 		}
 
 		.link {
